--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Redirecting to UPI</title>
-  <meta http-equiv="refresh" content="0; url=upi://pay?pa=tanujlaxmanna3107@oksbi&pn=College%20Fee%20Collection&am=30&cu=INR&tn=College%20Fee%20Payment">
+  <meta http-equiv="refresh" content="0; url=upi://pay?pa=8290246787@ptyes&pn=Zenith%202026%20Football%20Registration&am=200&cu=INR&tn=Zenith%202026%20Football%20Fee%20Payment">
 </head>
 <body>
   <h2>Redirecting to payment...</h2>
